Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54021

windeployqt does not deploy QtQuick.Controls 1 and 2 plugins.

XMLWordPrintable

    • 2b062a567c5ab282ce663ac5edf03b2cb56265ce (qttools/5.7, 28.6.2016, 5.7.1)

      If your application uses QtQuick.Controls 1 and 2, windeployqt does not deploy both packages.

      It seems to deploy which ever one is imported first in the application.

        For Gerrit Dashboard: QTBUG-54021
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            rupert_d Rupert Daniel
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes