windeployqt: Deduplicate QML imports by class name instead of module name.

QtQuick Controls 1 and 2 have identical module names, causing only
one of them to be deployed when mixing them.

Task-number: QTBUG-54021
Change-Id: Ie349d4fd3cac7c2a2a629e015cc58d39df2b7489
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>